fixed radio buttons being stretched out

--- a/timetrackerwebapp/src/Components/SignUpOrgPageTwo.css
+++ b/timetrackerwebapp/src/Components/SignUpOrgPageTwo.css
@@ -29,7 +29,7 @@ details ul{
    
 }
 .num-of-employees-section input{
-    width: 50%;
+   
 }
 .enter-card-details-container{
     grid-column-start:1;
